Document files and project (#16)